--- a/Week_20_Group_Activity.ipynb
+++ b/Week_20_Group_Activity.ipynb
@@ -10,33 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 139,
    "id": "d2a6e8a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies and modules:\n",
     "\n",
-    "import nltk\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import nltk\n",
+    "import nltk.data\n",
+    "from nltk.tokenize import sent_tokenize"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93fb656d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb10cde7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -50,63 +36,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 140,
    "id": "e8275b6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['In',\n",
-       " 'another',\n",
-       " 'moment',\n",
-       " 'down',\n",
-       " 'went',\n",
-       " 'Alice',\n",
-       " 'after',\n",
-       " 'it',\n",
-       " ',',\n",
-       " 'never',\n",
-       " 'once',\n",
-       " 'considering',\n",
-       " 'how',\n",
-       " 'in',\n",
-       " 'the',\n",
-       " 'world',\n",
-       " 'she',\n",
-       " 'was',\n",
-       " 'to',\n",
-       " 'get',\n",
-       " 'out',\n",
-       " 'again',\n",
-       " '.']"
+       "[['[',\n",
+       "  'Alice',\n",
+       "  \"'\",\n",
+       "  's',\n",
+       "  'Adventures',\n",
+       "  'in',\n",
+       "  'Wonderland',\n",
+       "  'by',\n",
+       "  'Lewis',\n",
+       "  'Carroll',\n",
+       "  '1865',\n",
+       "  ']'],\n",
+       " ['CHAPTER', 'I', '.'],\n",
+       " ['Down', 'the', 'Rabbit', '-', 'Hole'],\n",
+       " ['Alice',\n",
+       "  'was',\n",
+       "  'beginning',\n",
+       "  'to',\n",
+       "  'get',\n",
+       "  'very',\n",
+       "  'tired',\n",
+       "  'of',\n",
+       "  'sitting',\n",
+       "  'by',\n",
+       "  'her',\n",
+       "  'sister',\n",
+       "  'on',\n",
+       "  'the',\n",
+       "  'bank',\n",
+       "  ',',\n",
+       "  'and',\n",
+       "  'of',\n",
+       "  'having',\n",
+       "  'nothing',\n",
+       "  'to',\n",
+       "  'do',\n",
+       "  ':',\n",
+       "  'once',\n",
+       "  'or',\n",
+       "  'twice',\n",
+       "  'she',\n",
+       "  'had',\n",
+       "  'peeped',\n",
+       "  'into',\n",
+       "  'the',\n",
+       "  'book',\n",
+       "  'her',\n",
+       "  'sister',\n",
+       "  'was',\n",
+       "  'reading',\n",
+       "  ',',\n",
+       "  'but',\n",
+       "  'it',\n",
+       "  'had',\n",
+       "  'no',\n",
+       "  'pictures',\n",
+       "  'or',\n",
+       "  'conversations',\n",
+       "  'in',\n",
+       "  'it',\n",
+       "  ',',\n",
+       "  \"'\",\n",
+       "  'and',\n",
+       "  'what',\n",
+       "  'is',\n",
+       "  'the',\n",
+       "  'use',\n",
+       "  'of',\n",
+       "  'a',\n",
+       "  'book',\n",
+       "  \",'\",\n",
+       "  'thought',\n",
+       "  'Alice',\n",
+       "  \"'\",\n",
+       "  'without',\n",
+       "  'pictures',\n",
+       "  'or',\n",
+       "  'conversation',\n",
+       "  \"?'\"],\n",
+       " ['So',\n",
+       "  'she',\n",
+       "  'was',\n",
+       "  'considering',\n",
+       "  'in',\n",
+       "  'her',\n",
+       "  'own',\n",
+       "  'mind',\n",
+       "  '(',\n",
+       "  'as',\n",
+       "  'well',\n",
+       "  'as',\n",
+       "  'she',\n",
+       "  'could',\n",
+       "  ',',\n",
+       "  'for',\n",
+       "  'the',\n",
+       "  'hot',\n",
+       "  'day',\n",
+       "  'made',\n",
+       "  'her',\n",
+       "  'feel',\n",
+       "  'very',\n",
+       "  'sleepy',\n",
+       "  'and',\n",
+       "  'stupid',\n",
+       "  '),',\n",
+       "  'whether',\n",
+       "  'the',\n",
+       "  'pleasure',\n",
+       "  'of',\n",
+       "  'making',\n",
+       "  'a',\n",
+       "  'daisy',\n",
+       "  '-',\n",
+       "  'chain',\n",
+       "  'would',\n",
+       "  'be',\n",
+       "  'worth',\n",
+       "  'the',\n",
+       "  'trouble',\n",
+       "  'of',\n",
+       "  'getting',\n",
+       "  'up',\n",
+       "  'and',\n",
+       "  'picking',\n",
+       "  'the',\n",
+       "  'daisies',\n",
+       "  ',',\n",
+       "  'when',\n",
+       "  'suddenly',\n",
+       "  'a',\n",
+       "  'White',\n",
+       "  'Rabbit',\n",
+       "  'with',\n",
+       "  'pink',\n",
+       "  'eyes',\n",
+       "  'ran',\n",
+       "  'close',\n",
+       "  'by',\n",
+       "  'her',\n",
+       "  '.'],\n",
+       " ['There',\n",
+       "  'was',\n",
+       "  'nothing',\n",
+       "  'so',\n",
+       "  'VERY',\n",
+       "  'remarkable',\n",
+       "  'in',\n",
+       "  'that',\n",
+       "  ';',\n",
+       "  'nor',\n",
+       "  'did',\n",
+       "  'Alice',\n",
+       "  'think',\n",
+       "  'it',\n",
+       "  'so',\n",
+       "  'VERY',\n",
+       "  'much',\n",
+       "  'out',\n",
+       "  'of',\n",
+       "  'the',\n",
+       "  'way',\n",
+       "  'to',\n",
+       "  'hear',\n",
+       "  'the',\n",
+       "  'Rabbit',\n",
+       "  'say',\n",
+       "  'to',\n",
+       "  'itself',\n",
+       "  ',',\n",
+       "  \"'\",\n",
+       "  'Oh',\n",
+       "  'dear',\n",
+       "  '!'],\n",
+       " ['Oh', 'dear', '!'],\n",
+       " ['I', 'shall', 'be', 'late', \"!'\"],\n",
+       " ['(',\n",
+       "  'when',\n",
+       "  'she',\n",
+       "  'thought',\n",
+       "  'it',\n",
+       "  'over',\n",
+       "  'afterwards',\n",
+       "  ',',\n",
+       "  'it',\n",
+       "  'occurred',\n",
+       "  'to',\n",
+       "  'her',\n",
+       "  'that',\n",
+       "  'she',\n",
+       "  'ought',\n",
+       "  'to',\n",
+       "  'have',\n",
+       "  'wondered',\n",
+       "  'at',\n",
+       "  'this',\n",
+       "  ',',\n",
+       "  'but',\n",
+       "  'at',\n",
+       "  'the',\n",
+       "  'time',\n",
+       "  'it',\n",
+       "  'all',\n",
+       "  'seemed',\n",
+       "  'quite',\n",
+       "  'natural',\n",
+       "  ');',\n",
+       "  'but',\n",
+       "  'when',\n",
+       "  'the',\n",
+       "  'Rabbit',\n",
+       "  'actually',\n",
+       "  'TOOK',\n",
+       "  'A',\n",
+       "  'WATCH',\n",
+       "  'OUT',\n",
+       "  'OF',\n",
+       "  'ITS',\n",
+       "  'WAISTCOAT',\n",
+       "  '-',\n",
+       "  'POCKET',\n",
+       "  ',',\n",
+       "  'and',\n",
+       "  'looked',\n",
+       "  'at',\n",
+       "  'it',\n",
+       "  ',',\n",
+       "  'and',\n",
+       "  'then',\n",
+       "  'hurried',\n",
+       "  'on',\n",
+       "  ',',\n",
+       "  'Alice',\n",
+       "  'started',\n",
+       "  'to',\n",
+       "  'her',\n",
+       "  'feet',\n",
+       "  ',',\n",
+       "  'for',\n",
+       "  'it',\n",
+       "  'flashed',\n",
+       "  'across',\n",
+       "  'her',\n",
+       "  'mind',\n",
+       "  'that',\n",
+       "  'she',\n",
+       "  'had',\n",
+       "  'never',\n",
+       "  'before',\n",
+       "  'seen',\n",
+       "  'a',\n",
+       "  'rabbit',\n",
+       "  'with',\n",
+       "  'either',\n",
+       "  'a',\n",
+       "  'waistcoat',\n",
+       "  '-',\n",
+       "  'pocket',\n",
+       "  ',',\n",
+       "  'or',\n",
+       "  'a',\n",
+       "  'watch',\n",
+       "  'to',\n",
+       "  'take',\n",
+       "  'out',\n",
+       "  'of',\n",
+       "  'it',\n",
+       "  ',',\n",
+       "  'and',\n",
+       "  'burning',\n",
+       "  'with',\n",
+       "  'curiosity',\n",
+       "  ',',\n",
+       "  'she',\n",
+       "  'ran',\n",
+       "  'across',\n",
+       "  'the',\n",
+       "  'field',\n",
+       "  'after',\n",
+       "  'it',\n",
+       "  ',',\n",
+       "  'and',\n",
+       "  'fortunately',\n",
+       "  'was',\n",
+       "  'just',\n",
+       "  'in',\n",
+       "  'time',\n",
+       "  'to',\n",
+       "  'see',\n",
+       "  'it',\n",
+       "  'pop',\n",
+       "  'down',\n",
+       "  'a',\n",
+       "  'large',\n",
+       "  'rabbit',\n",
+       "  '-',\n",
+       "  'hole',\n",
+       "  'under',\n",
+       "  'the',\n",
+       "  'hedge',\n",
+       "  '.'],\n",
+       " ['In',\n",
+       "  'another',\n",
+       "  'moment',\n",
+       "  'down',\n",
+       "  'went',\n",
+       "  'Alice',\n",
+       "  'after',\n",
+       "  'it',\n",
+       "  ',',\n",
+       "  'never',\n",
+       "  'once',\n",
+       "  'considering',\n",
+       "  'how',\n",
+       "  'in',\n",
+       "  'the',\n",
+       "  'world',\n",
+       "  'she',\n",
+       "  'was',\n",
+       "  'to',\n",
+       "  'get',\n",
+       "  'out',\n",
+       "  'again',\n",
+       "  '.']]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sentences = nltk.corpus.gutenberg.sents(\"carroll-alice.txt\")[:10]\n",
-    "sentences[9]"
+    "sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "bded5a2b",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9ea83d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[\"[ Alice's Adventures in Wonderland by Lewis Carroll 1865 ]\"],\n",
+       " ['CHAPTER I.'],\n",
+       " ['Down the Rabbit-Hole'],\n",
+       " [\"Alice was beginning to get very tired of sitting by her sister on the bank,  and of having nothing to do: once or twice she had peeped into the book her sister was reading,  but it had no pictures or conversations in it, 'and what is the use of a book, ' thought Alice'without pictures or conversation?'\"],\n",
+       " ['So she was considering in her own mind (as well as she could,  for the hot day made her feel very sleepy and stupid),  whether the pleasure of making a daisy-chain would be worth the trouble of getting up and picking the daisies,  when suddenly a White Rabbit with pink eyes ran close by her.'],\n",
+       " [\"There was nothing so VERY remarkable in that; nor did Alice think it so VERY much out of the way to hear the Rabbit say to itself, 'Oh dear!\"],\n",
+       " ['Oh dear!'],\n",
+       " [\"I shall be late!'\"],\n",
+       " ['( when she thought it over afterwards,  it occurred to her that she ought to have wondered at this,  but at the time it all seemed quite natural) ; but when the Rabbit actually TOOK A WATCH OUT OF ITS WAISTCOAT-POCKET,  and looked at it,  and then hurried on,  Alice started to her feet,  for it flashed across her mind that she had never before seen a rabbit with either a waistcoat-pocket,  or a watch to take out of it,  and burning with curiosity,  she ran across the field after it,  and fortunately was just in time to see it pop down a large rabbit-hole under the hedge.'],\n",
+       " ['In another moment down went Alice after it,  never once considering how in the world she was to get out again.']]"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The corpus has been word-tokenized. But I want Sentence-tokenized. \n",
+    "# So I will concatenate everything back into one string by looping through the nested lists.\n",
+    "\n",
+    "def to_sentences(text):\n",
+    "    # concatenate words back into a list of one string. I have to doctor the punctuation, \n",
+    "    # and to do that, I found a handy list of punctuations found in NL:\n",
+    "    readable_sentences = []\n",
+    "    for e, tokens in enumerate(text):\n",
+    "        joined_tokens = \" \".join(tokens).replace(\"`` \", '\"').replace(\" ''\", '\"').replace('. . .', '...').replace(\" ' \",\"'\").replace(\" ;\", \";\")\n",
+    "        fixing_punkt = joined_tokens.replace(\" ( \", \" (\").replace(\" )\", \") \").replace(\" ' \", \"'\").replace(\" n't\", \"n't\").replace(\"can not\", \"cannot\")\n",
+    "        fixing_more_punkt = fixing_punkt.replace(\" - \",\"-\").replace(\" ,\", \", \").replace(\" .\", \".\").replace(' : ', ': ').replace(\" ?\", \"?\").replace(\" !\",\"!\")\n",
+    "        readable_sentences.append([fixing_more_punkt])\n",
+    "    # my desired output is lists of one string:\n",
+    "    return readable_sentences \n",
+    "\n",
+    "to_sentences(sentences)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,8 +441,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "531e8904",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b']"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def alpha_func(list_of_values):\n",
+    "    numbers_are_gross = filter(lambda x: (type(x)!=float and type(x)!=int), list_of_values)\n",
+    "    return list(numbers_are_gross)\n",
+    "\n",
+    "alpha_func([1,2,'a','b',7.6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "6cf538ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['zed', 'aardvark', 'heliotrope']"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_func([\"zed\", 52, 4.355, \"aardvark\", 'heliotrope'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13301fd9",
    "metadata": {},
    "outputs": [],
    "source": []
