--- a/Week_20_Homework.ipynb
+++ b/Week_20_Homework.ipynb
@@ -38,13 +38,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0236132b",
+   "cell_type": "markdown",
+   "id": "ae4ab7e1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "See .py file at: "
+    "See .py file at: https://github.com/N-J-Miller/Week_20/blob/bea71b0735f6182a517001786f3b731612a4a05d/counting_cats.py"
    ]
   },
   {
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e05f6c",
+   "id": "07167049",
    "metadata": {},
    "source": [
     "See https://github.com/N-J-Miller/Week_20/blob/b3d37e5ff0d9e23c74fe0295c52091688fc43819/README.md"
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81b53b86",
+   "id": "ea9b146b",
    "metadata": {},
    "source": [
     "There are a few steps I need to take to accomplish my end of a histogram of top 20 most frequently used non-stop words. First, I need to define stop words and then filter my dataset for them. Then I will filter to keep only alphanumeric words (tossing punctuation). Then I will stem or lemmatize to get lists of root words to sort by descending count."
@@ -102,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 302,
-   "id": "1d7862fd",
+   "id": "9e2d385d",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5870ef",
+   "id": "3c1e8608",
    "metadata": {},
    "source": [
     "Now I want to try stemming and lemmatization and see which performs better on my text."
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c9f29f",
+   "id": "7a37788c",
    "metadata": {},
    "source": [
     "#### Stemming:"
@@ -364,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ba32bb",
+   "id": "c2700f8e",
    "metadata": {},
    "source": [
     "Okay, my results for stemming are choked with Early Modern English stop words that are apparently not in the nltk list. I am going to append my sw set with the following: thou, thee, thus, thi, shall, yet, though, and us.(I did find a VERY cool Python module called Classical Languages Toolkit, cltk, that looked to be somebody's thesis project or something, but it was dead and broken. Here is the link, anyway, cuz its cool:http://cltk.org ) "
@@ -373,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "2e692822",
+   "id": "f35ce158",
    "metadata": {
     "scrolled": false
    },
@@ -387,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90179a1",
+   "id": "0ed213f3",
    "metadata": {},
    "source": [
     "#### Lemmatizing:"
@@ -396,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "56187863",
+   "id": "44a3a9fa",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90839d94",
+   "id": "7242c3cd",
    "metadata": {},
    "source": [
     "Lemmatizing looks more reasonable, but I'm afraid upper/lowercase might be an issue since lemmatizer does not force lower like stemmer. I will force lower and run both stem/lemmatizer again to be sure:"
@@ -581,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "087b28a9",
+   "id": "65601a29",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "9d39cd43",
+   "id": "90942b70",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b373284",
+   "id": "67096bc1",
    "metadata": {},
    "source": [
     "#### The methods produced comparable results, but stemming seems more reasonable for this text because the lemmatizing counts are generally lower where they aren't the same which tells me it is probably not grabbing words like \"heaven-ly\" or \"good-ly\", which I want to count as their stems heaven and good, for example. It's easy to plot two histograms in one plot, tho, so I'll go ahead and throw them both in to be visualized. "
@@ -831,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "1d289b67",
+   "id": "06176eca",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f952f4c",
+   "id": "17e7a055",
    "metadata": {},
    "source": [
     "I did some research on tokenizing and apparently when you use nltk...sents()  but then have to join your tokenized words back together AND deal with  whitespaces around punctuation, this becomes more computationally expensive  than using the PlaintextCorpusReader module WITHOUT tokenizing each sentence  with .sent. So here I will directly read from corpus fileid into a block of sentences."
@@ -909,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "5eef931a",
+   "id": "d82cd482",
    "metadata": {},
    "outputs": [
     {
@@ -6953,7 +6951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc0fdc3",
+   "id": "a2806b10",
    "metadata": {},
    "source": [
     "## Analyse the Sense Sentence Sentiments!!! \n",
@@ -7155,7 +7153,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "1b44bfc4",
+   "id": "319ecb03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7175,7 +7173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49efc16f",
+   "id": "4995aa49",
    "metadata": {},
    "source": [
     "### Display Results!"
@@ -7184,7 +7182,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "f346fd28",
+   "id": "891b4c9a",
    "metadata": {},
    "outputs": [
     {
@@ -7225,7 +7223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834326cd",
+   "id": "fe8113a4",
    "metadata": {},
    "source": [
     "The sentences turned out great thanks to streaming the entire text block with PlaintextCorpusReader. This must have contributed to good sentiment analysis because the scores were as expected given the lexicon definitions. The most intuitive proof? \"No.\" = 100% negative sentiment. Thanks, Vader. XD"
